--- a/node/package.json
+++ b/node/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx watch src/http/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@fastify/cookie": "^9.3.1",
+    "@fastify/websocket": "^8.3.1",
     "@prisma/client": "5.9.1",
     "fastify": "^4.26.0",
+    "ioredis": "^5.3.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
