--- a/unite/node/package.json
+++ b/unite/node/package.json
@@ -11,9 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rotrenanoliveira/eslint-config": "1.0.0",
     "@types/node": "^20.12.2",
     "eslint": "^8.57.0",
-    "@rotrenanoliveira/eslint-config": "1.0.0",
     "prisma": "^5.11.0",
     "tsx": "^4.7.1",
     "typescript": "^5.4.3"
@@ -21,6 +21,7 @@
   "dependencies": {
     "@prisma/client": "5.11.0",
     "fastify": "^4.26.2",
+    "fastify-type-provider-zod": "^1.1.9",
     "zod": "^3.22.4"
   }
 }
