--- a/unite/node/package.json
+++ b/unite/node/package.json
@@ -5,11 +5,19 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch --env-file .env src/server.ts",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "build": "tsup src --format esm",
+    "start": "node dist/server.mjs",
+    "db:migrate": "prisma migrate dev ",
+    "db:seed": "prisma db seed",
+    "db:studio": "prisma studio"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "devDependencies": {
     "@rotrenanoliveira/eslint-config": "1.0.0",
     "@types/node": "^20.12.2",
@@ -19,6 +27,9 @@
     "typescript": "^5.4.3"
   },
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
+    "@fastify/swagger": "^8.14.0",
+    "@fastify/swagger-ui": "^3.0.0",
     "@prisma/client": "5.11.0",
     "fastify": "^4.26.2",
     "fastify-type-provider-zod": "^1.1.9",
