--- a/unite/react-native/mobile/package.json
+++ b/unite/react-native/mobile/package.json
@@ -17,6 +17,7 @@
     "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.1.17",
+    "axios": "^1.6.8",
     "expo": "~50.0.15",
     "expo-font": "~11.10.3",
     "expo-image-picker": "~14.7.1",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.4",
     "@types/react": "~18.2.77",
+    "@types/react-native": "^0.73.0",
     "jest": "^29.7.0",
     "jest-expo": "~50.0.4",
     "react-test-renderer": "18.2.0",
